# anitomy-napi

./: .clang-format  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  binding-options.js  index.d.ts  index.js  package-lock.json  package.json
src/: main.cpp
test/: exception.txt  package-lock.json  package.json  test.js
